--- a/ProgWebII/Views/Account/Register.cshtml
+++ b/ProgWebII/Views/Account/Register.cshtml
@@ -1,17 +1,38 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-    @model AcademicEvents.ViewModels.RegisterViewModel
-    <h2>Cadastro</h2>
-    <form method="post">
-        <label>Nome <input asp-for="Name" /></label>
-        <span asp-validation-for="Name"></span>
-        <label>E-mail <input asp-for="Email" /></label>
-        <span asp-validation-for="Email"></span>
-        <label>Senha <input asp-for="Password" type="password" /></label>
-        <span asp-validation-for="Password"></span>
-        <button type="submit">Cadastrar</button>
-    </form>
+@model AcademicEvents.ViewModels.RegisterViewModel
 
-}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h3 class="text-center mb-4">Cadastro</h3>
+
+                    <form method="post" novalidate>
+                        <div class="form-group mb-3">
+                            <label asp-for="Name" class="form-label"></label>
+                            <input asp-for="Name" class="form-control" placeholder="Digite seu nome" />
+                            <span asp-validation-for="Name" class="text-danger small"></span>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label asp-for="Email" class="form-label"></label>
+                            <input asp-for="Email" class="form-control" placeholder="Digite seu e-mail" />
+                            <span asp-validation-for="Email" class="text-danger small"></span>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label asp-for="Password" class="form-label"></label>
+                            <input asp-for="Password" type="password" class="form-control" placeholder="Crie uma senha" />
+                            <span asp-validation-for="Password" class="text-danger small"></span>
+                        </div>
+
+                        <button type="submit" class="btn btn-success w-100">Cadastrar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
